# darling-system_cmds

./: CMakeLists.txt  README.md
ac.tproj/: CMakeLists.txt
accton.tproj/: CMakeLists.txt
arch.tproj/: CMakeLists.txt  arch.c
at.tproj/: CMakeLists.txt
atrun.tproj/: CMakeLists.txt
chkpasswd.tproj/: CMakeLists.txt
chpass.tproj/: CMakeLists.txt
cpuctl.tproj/: CMakeLists.txt
darling/scripts/: gen_getconf.sh  gen_wait4path.sh
dmesg.tproj/: CMakeLists.txt
dynamic_pager.tproj/: CMakeLists.txt
fs_usage.tproj/: CMakeLists.txt
gcore.tproj/: CMakeLists.txt
getconf.tproj/: CMakeLists.txt  limits.c
getty.tproj/: CMakeLists.txt
hostinfo.tproj/: CMakeLists.txt
iosim.tproj/: CMakeLists.txt  iosim.c
iostat.tproj/: CMakeLists.txt
kpgo.tproj/: CMakeLists.txt
latency.tproj/: CMakeLists.txt
login.tproj/: CMakeLists.txt
lskq.tproj/: CMakeLists.txt
lsmp.tproj/: CMakeLists.txt
ltop.tproj/: CMakeLists.txt
mean.tproj/: CMakeLists.txt
memory_pressure.tproj/: CMakeLists.txt
mkfile.tproj/: CMakeLists.txt
mslutil/: CMakeLists.txt
newgrp.tproj/: CMakeLists.txt
nologin.tproj/: CMakeLists.txt
nvram.tproj/: CMakeLists.txt
pagesize.tproj/: CMakeLists.txt
passwd.tproj/: CMakeLists.txt
proc_uuid_policy.tproj/: CMakeLists.txt
purge.tproj/: CMakeLists.txt
pwd_mkdb.tproj/: CMakeLists.txt
reboot.tproj/: CMakeLists.txt  reboot.c
sa.tproj/: CMakeLists.txt
sc_usage.tproj/: CMakeLists.txt
shutdown.tproj/: CMakeLists.txt  kextmanager.defs
stackshot.tproj/: CMakeLists.txt
sync.tproj/: CMakeLists.txt
sysctl.tproj/: CMakeLists.txt
taskpolicy.tproj/: CMakeLists.txt
trace.tproj/: CMakeLists.txt
vifs.tproj/: CMakeLists.txt
vipw.tproj/: CMakeLists.txt
vm_purgeable_stat.tproj/: CMakeLists.txt
vm_stat.tproj/: CMakeLists.txt
wait4path/: CMakeLists.txt
wordexp-helper.tproj/: CMakeLists.txt
zdump.tproj/: CMakeLists.txt
zic.tproj/: CMakeLists.txt
zlog.tproj/: CMakeLists.txt
zprint.tproj/: CMakeLists.txt
